Fix electron app prefill app config on launch

--- a/config_app/index.html
+++ b/config_app/index.html
@@ -22,6 +22,11 @@
       </div>
 
       <div class="input-control">
+        <div class="input-label">Current Directory</div>
+        <div class="input-field"><input type="text" id="currentDirInput" readonly /></div>
+      </div>
+
+      <div class="input-control">
         <div class="input-label">Data Directory</div>
         <div class="input-field">
           <input type="text" id="dataDirInput">
