Configure app to accept file upload directory

--- a/config_app/index.html
+++ b/config_app/index.html
@@ -26,7 +26,7 @@
       </div>
 
       <div class="input-control">
-        <div class="input-label">Current Directory</div>
+        <div class="input-label">App Directory</div>
         <div class="input-field">
           <div class="input-value">
             <input type="text" id="currentDirInput" readonly />
@@ -51,6 +51,16 @@
             <input type="text" id="logFileInput" /> <button class="button" id="logFileChooseButton">Choose</button>
           </div>
           <div class="input-hint">If you want to use an absolute path, make sure to start with a / character, eg. /home/you/Documents/logs/debug.log.</div>
+        </div>
+      </div>
+
+      <div class="input-control">
+        <div class="input-label">Upload Directory</div>
+        <div class="input-field">
+          <div class="input-value">
+            <input type="text" id="uploadDirInput" /> <button class="button" id="uploadDirChooseButton">Choose</button>
+          </div>
+          <div class="input-hint">If you want to use an absolute path, make sure to start with a / character, eg. /home/you/Documents/uploads.</div>
         </div>
       </div>
 
