Enable configuring data root dir, default in user's documents path

--- a/config_app/index.html
+++ b/config_app/index.html
@@ -29,38 +29,38 @@
         <div class="input-label">App Directory</div>
         <div class="input-field">
           <div class="input-value">
-            <input type="text" id="currentDirInput" readonly />
+            <input type="text" id="appRootDirInput" readonly />
           </div>
         </div>
       </div>
 
       <div class="input-control">
-        <div class="input-label">Data Directory</div>
+        <div class="input-label">Logs Directory</div>
         <div class="input-field">
           <div class="input-value">
-            <input type="text" id="dataDirInput" /> <button class="button" id="dataDirChooseButton">Choose</button>
+            <input type="text" id="logsRootDirInput" readonly />
           </div>
-          <div class="input-hint">If you want to use an absolute path, make sure to start with a / character, eg. /home/you/Documents/data.</div>
+          <div class="input-hint">The App's log files will be stored here.</div>
         </div>
       </div>
 
       <div class="input-control">
-        <div class="input-label">Log File Path</div>
+        <div class="input-label">Config File Path</div>
         <div class="input-field">
           <div class="input-value">
-            <input type="text" id="logFileInput" /> <button class="button" id="logFileChooseButton">Choose</button>
+            <input type="text" id="userConfigFilePathInput" readonly />
           </div>
-          <div class="input-hint">If you want to use an absolute path, make sure to start with a / character, eg. /home/you/Documents/logs/debug.log.</div>
+          <div class="input-hint">The App's configurations will be stored here.</div>
         </div>
       </div>
 
       <div class="input-control">
-        <div class="input-label">Upload Directory</div>
+        <div class="input-label">Data Root Directory</div>
         <div class="input-field">
           <div class="input-value">
-            <input type="text" id="uploadDirInput" /> <button class="button" id="uploadDirChooseButton">Choose</button>
+            <input type="text" id="dataRootDirInput" /> <button class="button" id="dataRootDirChooseButton">Choose</button>
           </div>
-          <div class="input-hint">If you want to use an absolute path, make sure to start with a / character, eg. /home/you/Documents/uploads.</div>
+          <div class="input-hint">This is the root directory for app data and file uploads.</div>
         </div>
       </div>
 
