--- a/config_app/index.html
+++ b/config_app/index.html
@@ -22,6 +22,7 @@
           <div class="input-value">
             <input type="number" id="portInput" />
           </div>
+          <div class="input-error" id="portInputError"></div>
         </div>
       </div>
 
@@ -29,7 +30,7 @@
         <div class="input-label">App Directory</div>
         <div class="input-field">
           <div class="input-value">
-            <input type="text" id="appRootDirInput" readonly />
+            <input type="text" id="appRootDirInput" readonly /> <button class="button" id="appRootDirShowButton">Show In Finder</button>
           </div>
         </div>
       </div>
@@ -38,7 +39,7 @@
         <div class="input-label">Logs Directory</div>
         <div class="input-field">
           <div class="input-value">
-            <input type="text" id="logsRootDirInput" readonly />
+            <input type="text" id="logsRootDirInput" readonly /> <button class="button" id="logsRootDirShowButton">Show In Finder</button>
           </div>
           <div class="input-hint">The App's log files will be stored here.</div>
         </div>
@@ -48,7 +49,7 @@
         <div class="input-label">Config File Path</div>
         <div class="input-field">
           <div class="input-value">
-            <input type="text" id="userConfigFilePathInput" readonly />
+            <input type="text" id="userConfigFilePathInput" readonly /> <button class="button" id="userConfigFilePathShowButton">Show In Finder</button>
           </div>
           <div class="input-hint">The App's configurations will be stored here.</div>
         </div>
@@ -61,6 +62,7 @@
             <input type="text" id="dataRootDirInput" /> <button class="button" id="dataRootDirChooseButton">Choose</button>
           </div>
           <div class="input-hint">This is the root directory for app data and file uploads.</div>
+          <div class="input-error" id="dataRootDirInputError"></div>
         </div>
       </div>
 
